--- a/ben10.html
+++ b/ben10.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  ADT APPS built the Ben10 Skins fot MCPE app as
+                  ADT APPS built the ben10 app as
                   a Free app. This SERVICE is provided by
                   ADT APPS at no cost and is intended for use as
                   is.
@@ -25,11 +25,11 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  Ben10 Skins fot MCPE unless otherwise defined in this Privacy Policy.
+                  ben10 unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
-                  identifiable information, including but not limited to ADT APPS. The information that
+                  identifiable information, including but not limited to adt apps. The information that
                   I request will be retained on your device and is not collected by me in any way.
                 </p> <div><p>
                     The app does use third party services that may collect
