--- a/wallpaperamoled.html
+++ b/wallpaperamoled.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  ADT APPS built the Amoled 4K Backgrounds 2021 - Amoled Wallpapers 2021 app as
+                  ADT APPS built the 4K Amoled Wallpaper 2021 - Amoled Background 2021 app as
                   a Free app. This SERVICE is provided by
                   ADT APPS at no cost and is intended for use as
                   is.
