--- a/worldcupfootball.html
+++ b/worldcupfootball.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  ADT APPS built the World Cup Football Wallpapers - Ultra HD Football Wallpapers app as
+                  ADT APPS built the World Cup Football - Ultra HD Football Wallpapers app as
                   a Free app. This SERVICE is provided by
                   ADT APPS at no cost and is intended for use as
                   is.
