--- a/carandmotorcyle.html
+++ b/carandmotorcyle.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  ADT APPS built the Wallpaper Mobil 4K 2021 - Latar Belakang Sepeda Motor Ultra HD app as
+                  ADT APPS built the Car Wallpaper 4K - Wallpaper 2021 app as
                   a Free app. This SERVICE is provided by
                   ADT APPS at no cost and is intended for use as
                   is.
